--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="opportunity">Opportunity</string>
     <string name="spirit">Spirit</string>
     <string name="mars_rover_photos">Mars Rover Photos</string>
+    <string name="fhaz">FHAZ</string>
+    <string name="rhaz">RHAZ</string>
+    <string name="mast">MAST</string>
+    <string name="chemcam">CHEMCAM</string>
+    <string name="mahli">MAHLI</string>
+    <string name="mardi">MARDI</string>
+    <string name="navcam">NAVCAM</string>
+    <string name="pancam">PANCAM</string>
+    <string name="minites">MINITES</string>
+    <string name="none">None</string>
 </resources>
