--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="status">Status</string>
     <string name="launch_date">Launch Date</string>
     <string name="landing_date">Landing Date</string>
+    <string name="retry">Retry</string>
 </resources>
