--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Mars</string>
-    <string name="curiosity">Curiosity</string>
-    <string name="opportunity">Opportunity</string>
-    <string name="spirit">Spirit</string>
+    <string name="curiosity">CURIOSITY</string>
+    <string name="opportunity">OPPORTUNITY</string>
+    <string name="spirit">SPIRIT</string>
     <string name="mars_rover_photos">Mars Rover Photos</string>
     <string name="fhaz">FHAZ</string>
     <string name="rhaz">RHAZ</string>
